# cuda-test

./: CMakeLists.txt  README  mkbuild
common/: CMakeLists.txt
common/inc/: cutil.h
common/src/: cutil.cpp
src/: CMakeLists.txt  KeywordMatrix.cpp  KeywordMatrix.h  covariance.cu  covariance.h  covariance_kernel.cu  external_dependency.h  keyword_util.h  main.cc  main_for_lib.cc  opts.c  opts.h  test_lib.cu  timer.cc  timer.h  version.cu
tests/: CMakeLists.txt  covariance.mm  keywords.txt  matrix_util.hpp  test_covariance.cpp  test_keyword_matrix.cpp
